--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,7 @@ axum = "0.8.4"
 bytes = "1.10.1"
 camino = "1.1.10"
 clap = { version = "4.5.41", features = ["derive"] }
-image = "0.25.6"
-mime_guess = "2.0.5"
+infer = "0.19.0"
 quick-xml = { version = "0.38.0", features = ["serialize"] }
 reqwest = "0.12.22"
 serde = { version = "1.0.219", features = ["derive"] }
@@ -28,6 +27,7 @@ tokio = { version = "1.47.0", features = [
   "macros",
   "fs",
   "signal",
+  "process",
 ] }
 tokio-util = "0.7.15"
 tower-http = { version = "0.6.6", features = ["cors"] }
