start work on web

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,4 +38,4 @@ tracing-subscriber = "0.3.19"
 anyhow = "1.0.98"
 camino = "1.1.10"
 sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
-tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros", "fs"] }
+tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
