--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ lto = "fat"
 codegen-units = 1
 opt-level = 3
 
+[profile.dev.package.askama_derive]
+opt-level = 3
+
 [dependencies]
 anyhow = "1.0.98"
 askama = { version = "0.14.0", features = ["blocks"] }
@@ -38,4 +41,9 @@ tracing-subscriber = "0.3.19"
 anyhow = "1.0.98"
 camino = "1.1.10"
 sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
-tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
+tokio = { version = "1.47.0", features = [
+  "rt-multi-thread",
+  "macros",
+  "fs",
+  "process",
+] }
