--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,22 +7,7 @@
 	"semi": false,
 	"useTabs": true,
 	"tabWidth": 4,
-	"plugins": [
-		"@trivago/prettier-plugin-sort-imports",
-		"prettier-plugin-organize-attributes",
-		"prettier-plugin-tailwindcss",
-		"prettier-plugin-jinja-template"
-	],
-	"overrides": [
-		{
-			"files": ["*.html"],
-			"options": {
-				"parser": "jinja-template"
-			}
-		}
-	],
-	"importOrderParserPlugins": ["decorators", "typescript"],
-	"importOrderSeparation": true,
-	"importOrderSortSpecifiers": true,
-	"importOrder": ["<THIRD_PARTY_MODULES>", "([.][.]?/)|(app/)"]
+	"importOrderParserPlugins": [
+		"typescript"
+	]
 }
