--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "arueshalae"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2024"
 
 [profile.release]
@@ -8,19 +8,14 @@ lto = "fat"
 codegen-units = 1
 opt-level = 3
 
-[profile.dev.package.askama_derive]
-opt-level = 3
-
 [dependencies]
 anyhow = "1.0.98"
-askama = { version = "0.14.0", features = ["blocks"] }
 axum = "0.8.4"
+axum_typed_multipart = "0.16.3"
 bytes = "1.10.1"
 camino = "1.1.10"
 clap = { version = "4.5.41", features = ["derive"] }
 infer = "0.19.0"
-quick-xml = { version = "0.38.0", features = ["serialize"] }
-reqwest = "0.12.22"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.141"
 sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
