--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-	"$schema": "https://www.schemastore.org/package.json",
-	"private": false,
-	"dependencies": {
-		"@tailwindcss/cli": "^4.1.11",
-		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
-		"esbuild": "^0.25.8",
-		"prettier": "^3.6.2",
-		"prettier-plugin-jinja-template": "^2.1.0",
-		"prettier-plugin-organize-attributes": "^1.0.0",
-		"prettier-plugin-tailwindcss": "^0.6.14",
-		"tailwindcss": "^4.1.11"
-	}
+  "name": "arueshalae-userscript",
+  "private": true,
+  "type": "module",
+  "dependencies": {
+    "esbuild": "^0.25.9",
+    "prettier": "^3.6.2",
+    "vanjs-core": "^1.5.5"
+  }
 }
