--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,8 @@ tokio = { version = "1.47.0", features = [
   "signal",
   "process",
 ] }
-tokio-util = "0.7.15"
-tower-http = { version = "0.6.6", features = ["cors"] }
+tokio-util = { version = "0.7.15", features = ["io"] }
+tower-http = { version = "0.6.6", features = ["cors", "trace"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 
